# protobuf-web-tokens

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  elm.json  package-lock.json  package.json  pwt.proto  tsconfig.json
benches/: pwt_vs_jwt.rs
src/: Base64UrlSafe.elm  Runner.elm  decoder.ts  index.ts  jwt.rs  lib.rs  pwt.ts  signer.ts  types.ts  verifier.ts
src/Proto/: Pwt.elm
src/Proto/Google/: Protobuf.elm
src/Proto/Google/Protobuf/: Internals_.elm
src/Proto/Pwt/: Internals_.elm
src/Protobuf/: Token.elm
src/google/protobuf/: timestamp.ts
test_protos/: test.proto
test_resources/: private.pem  test.proto
tests/: Example.elm  gen-elm-test.mjs  gen-fuzz.ts  index.spec.ts  pem-to-key.ts
tests/Proto/: Test.elm
tests/Proto/Test/: Internals_.elm  Role.elm
tests/test_resources/: test.ts
