[package]
name = "protobuf-web-token"
version = "0.2.0"
edition = "2021"


license = "	BSD-3-Clause"
description = "Create, verify and decode protobuf web tokens"
homepage = "https://github.com/andreasewering/protobuf-web-tokens"
documentation = "https://github.com/andreasewering/protobuf-web-tokens"
repository = "https://github.com/andreasewering/protobuf-web-tokens"
readme = "README.md"
keywords = ["protobuf", "web", "token"]
categories = ["authentication", "encoding"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
prost = "0.12"
ed25519-dalek = { version = "2.0", features = ["pem"] }
base64 = "0.21"
prost-types = "0.12"

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
josekit = "0.8.2"
serde = "1"
serde_json = "1"

[[bench]]
name = "pwt_vs_jwt"
harness = false
