[package]
name = "protobuf-web-token"
version = "0.5.0"
edition = "2021"


license = "	BSD-3-Clause"
description = "Create, verify and decode protobuf web tokens"
homepage = "https://github.com/andreasewering/protobuf-web-tokens"
documentation = "https://github.com/andreasewering/protobuf-web-tokens"
repository = "https://github.com/andreasewering/protobuf-web-tokens"
readme = "README.md"
keywords = ["protobuf", "web", "token"]
categories = ["authentication", "encoding"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
prost = "0.13"
ed25519-dalek = { version = "2.1", features = ["pem"] }
base64 = "0.22"
prost-types = "0.13"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
josekit = "0.8.2"
serde = "1"
serde_json = "1"
rand = "0.8.5"

[[bench]]
name = "pwt_vs_jwt"
harness = false
